--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -13,11 +13,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: eclipse-zenoh/zenoh-python
+      - uses: actions/checkout@v2
+        with:
+          path: nightly
       - name: Change package name and version
         shell: bash
-        run: |
-          wget https://raw.githubusercontent.com/JEnoch/zenoh-python-nightly/main/change-setup.py
-          python change-setup.py
+        run: python nightly/change-setup.py
       - uses: actions/setup-python@v2
         name: Install Python
         with:
@@ -79,11 +80,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: eclipse-zenoh/zenoh-python
+      - uses: actions/checkout@v2
+        with:
+          path: nightly
       - name: Change package name and version
         shell: bash
-        run: |
-          wget https://raw.githubusercontent.com/JEnoch/zenoh-python-nightly/main/change-setup.py
-          python change-setup.py
+        run: python nightly/change-setup.py
       - name: Set up QEMU
         if: matrix.job.os == 'Linux'
         uses: docker/setup-qemu-action@v1
