--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 1 * * 1-5"
   workflow_dispatch:
 
+env:
+  PYTHON_VERSION: "3.7"
+
 jobs:
   sdist:
     name: Build sdist
@@ -12,7 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: eclipse-zenoh/zenoh-python
+          repository: JEnoch/zenoh-python
+          ref: test-PR-maturin
       - uses: actions/checkout@v2
         with:
           path: nightly
@@ -24,91 +28,127 @@ jobs:
         with:
           python-version: "3.9"
       - name: Install deps
-        run: pip install -U twine setuptools-rust
+        run: pip install -U twine
       - name: Build sdist
-        run: python setup.py sdist
+        uses: messense/maturin-action@v1
+        with:
+          args: --interpreter --out dist
+      - name: Check dist
+        run: ls -al ./dist/*
       - uses: actions/upload-artifact@v2
         with:
           name: wheels
           path: ./dist/*
 
-  build_wheels:
-    name: Build wheel for ${{ matrix.job.os }} ${{ matrix.job.arch }}
-    runs-on: ${{ matrix.job.runner }}
-    strategy:
-      fail-fast: false
-      matrix:
-        job:
-          - {
-              os: Linux,
-              arch: x86_64,
-              runner: ubuntu-latest,
-              env: 'PATH="$PATH:$HOME/.cargo/bin"',
-            }
-          - {
-              os: Linux,
-              arch: i686,
-              runner: ubuntu-latest,
-              env: 'PATH="$PATH:$HOME/.cargo/bin"',
-            }
-          - {
-              os: Linux,
-              arch: aarch64,
-              runner: ubuntu-latest,
-              env: 'PATH="$PATH:$HOME/.cargo/bin"',
-            }
-          - { os: Windows, arch: AMD64, runner: windows-latest }
-          - {
-              os: MacOS,
-              arch: x86_64,
-              runner: macos-latest,
-              env: MACOSX_DEPLOYMENT_TARGET=10.9,
-            }
-          - {
-              os: MacOS,
-              arch: arm64,
-              runner: macos-latest,
-              env: MACOSX_DEPLOYMENT_TARGET=10.9 CARGO_BUILD_TARGET="aarch64-apple-darwin" PYO3_CROSS_LIB_DIR="/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8",
-            }
-          - {
-              os: MacOS,
-              arch: universal2,
-              runner: macos-latest,
-              env: MACOSX_DEPLOYMENT_TARGET=10.9 CARGO_BUILD_TARGET="aarch64-apple-darwin" PYO3_CROSS_LIB_DIR="/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8",
-            }
+  macos:
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
-          repository: eclipse-zenoh/zenoh-python
-      - uses: actions/checkout@v2
+          python-version: ${{ env.PYTHON_VERSION }}
+          architecture: x64
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
         with:
-          path: nightly
-      - name: Change package name and version
-        shell: bash
-        run: python nightly/change-setup.py
-      - name: Set up QEMU
-        if: matrix.job.os == 'Linux'
-        uses: docker/setup-qemu-action@v1
+          toolchain: stable
+          profile: minimal
+          default: true
+      - name: Build wheels - x86_64
+        uses: messense/maturin-action@v1
         with:
-          platforms: all
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.1.3
-        env:
-          CIBW_ARCHS: ${{ matrix.job.arch }}
-          CIBW_BUILD: cp38-*
-          CIBW_SKIP: "*win32"
-          CIBW_ENVIRONMENT: ${{ matrix.job.env }}
-          CIBW_BEFORE_ALL_LINUX: "yum install -y wget && wget https://sh.rustup.rs -O rustup-install.sh && sh rustup-install.sh -y"
-          CIBW_BEFORE_ALL_MACOS: |
-            case ${{ matrix.job.arch }} in
-              arm64|universal2)
-                rustup target add aarch64-apple-darwin ;;
-            esac
-          CIBW_BEFORE_BUILD: pip install -U setuptools-rust
-      - uses: actions/upload-artifact@v2
+          target: x86_64
+          args: --release --out dist
+      - name: Build wheels - universal2
+        uses: messense/maturin-action@v1
+        with:
+          args: --release --universal2 --out dist --no-sdist
+      - name: Check dist
+        run: ls -al ./dist/*
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
         with:
           name: wheels
-          path: ./wheelhouse/*.whl
+          path: dist
+
+  windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        target: [x64, x86]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          architecture: ${{ matrix.target }}
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          default: true
+      - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          args: --release --out dist --no-sdist
+      - name: Check dist
+        run: ls -al ./dist/*
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
+  linux:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [x86_64, i686]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          architecture: x64
+      - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          manylinux: auto
+          args: --release --out dist --no-sdist
+      - name: Check dist
+        run: ls -al ./dist/*
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
+  linux-cross:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [aarch64, armv7]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          manylinux: auto
+          args: --release --out dist --no-sdist
+      - name: Check dist
+        run: ls -al ./dist/*
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
 
   deploy-wheels:
     needs: [sdist, build_wheels]
@@ -120,7 +160,8 @@ jobs:
         with:
           name: wheels
           path: dist
-
+      - name: Check dist
+        run: ls -al ./dist/*
       - uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
