--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -56,8 +56,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: JEnoch/zenoh-python
-          ref: test-PR-maturin
+          repository: eclipse-zenoh/zenoh-python
       - uses: actions/checkout@v2
         with:
           path: nightly
@@ -96,8 +95,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: JEnoch/zenoh-python
-          ref: test-PR-maturin
+          repository: eclipse-zenoh/zenoh-python
       - uses: actions/checkout@v2
         with:
           path: nightly
@@ -130,8 +128,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: JEnoch/zenoh-python
-          ref: test-PR-maturin
+          repository: eclipse-zenoh/zenoh-python
       - uses: actions/checkout@v2
         with:
           path: nightly
@@ -155,8 +152,46 @@ jobs:
           name: wheels
           path: dist
 
+  linux-armv6:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          repository: eclipse-zenoh/zenoh-python
+      - uses: actions/checkout@v2
+        with:
+          path: nightly
+      - name: Change package name and version
+        shell: bash
+        run: python nightly/change-pyproject.py
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          target: arm-unknown-linux-gnueabihf
+          default: true
+      - name: install cross toolchain
+        run: |
+          brew tap messense/macos-cross-toolchains
+          brew install arm-unknown-linux-gnueabihf
+          export CC_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-gcc
+          export CXX_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-g++
+          export AR_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-ar
+          export CARGO_TARGET_ARM_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-unknown-linux-gnueabihf-gcc
+          pip3 install maturin
+          maturin build --release --target arm-unknown-linux-gnueabihf --out dist
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
   deploy-wheels:
-    needs: [macos, windows, linux, linux-cross]
+    needs: [macos, windows, linux, linux-cross, linux-armv6]
     name: deploy wheels to pypi
     runs-on: ubuntu-18.04
 
