--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -56,6 +56,18 @@ jobs:
       - name: Change package name and version
         shell: bash
         run: python nightly/change-pyproject.py
+      - name: Environment explore
+        id: env
+        shell: pwsh
+        run: |
+          echo ${env:PATH}
+          echo ${env}
+          ls C:\
+          ls C:\hostedtoolcache\
+          ls C:\hostedtoolcache\windows\
+          ls C:\hostedtoolcache\windows\Python\3.8.10\
+          ls C:\hostedtoolcache\windows\Python\3.10.8\x64\
+          python -c "import sys; print(sys.version)"
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
