--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -28,13 +28,11 @@ jobs:
         uses: messense/maturin-action@v1
         with:
           target: x86_64
-          args: --release --out dist # Note: this step builds also the sources distrib
+          args: --release --out dist --sdist # Note: this step builds also the sources distrib
       - name: Build wheels - universal2
         uses: messense/maturin-action@v1
         with:
-          args: --release --universal2 --out dist --no-sdist
-      - name: Check dist
-        run: ls -al ./dist/*
+          args: --release --universal2 --out dist
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -57,18 +55,6 @@ jobs:
       - name: Change package name and version
         shell: bash
         run: python nightly/change-pyproject.py
-      - name: Environment explore
-        id: env
-        shell: pwsh
-        run: |
-          echo ${env:PATH}
-          echo ${env}
-          ls C:\
-          ls C:\hostedtoolcache\
-          ls C:\hostedtoolcache\windows\
-          ls C:\hostedtoolcache\windows\Python\3.8.10\
-          ls C:\hostedtoolcache\windows\Python\3.10.8\x64\
-          python -c "import sys; print(sys.version)"
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -79,10 +65,7 @@ jobs:
         uses: messense/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --no-sdist -i python3.10
-      - name: Check dist
-        run: ls -al ./dist/*
-        shell: bash
+          args: --release --out dist
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -93,7 +76,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64, i686]
+        target: [x86_64, i686, aarch64, armv7]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -109,38 +92,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: auto
-          args: --release --out dist --no-sdist
-      - name: Check dist
-        run: ls -al ./dist/*
-      - name: Upload wheels
-        uses: actions/upload-artifact@v2
-        with:
-          name: wheels
-          path: dist
-
-  linux-cross:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [aarch64, armv7]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          repository: eclipse-zenoh/zenoh-python
-      - uses: actions/checkout@v2
-        with:
-          path: nightly
-      - name: Change package name and version
-        shell: bash
-        run: python nightly/change-pyproject.py
-      - name: Build wheels
-        uses: messense/maturin-action@v1
-        with:
-          target: ${{ matrix.target }}
-          manylinux: auto
-          args: --release --out dist --no-sdist
-      - name: Check dist
-        run: ls -al ./dist/*
+          args: --release --out dist
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -170,10 +122,12 @@ jobs:
         run: |
           brew tap messense/macos-cross-toolchains
           brew install arm-unknown-linux-gnueabihf
+
           export CC_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-gcc
           export CXX_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-g++
           export AR_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-ar
           export CARGO_TARGET_ARM_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-unknown-linux-gnueabihf-gcc
+
           pip3 install maturin
           maturin build --release --target arm-unknown-linux-gnueabihf --out dist
       - name: Upload wheels
@@ -183,7 +137,7 @@ jobs:
           path: dist
 
   # deploy-wheels:
-  #   needs: [macos, windows, linux, linux-cross, linux-armv6]
+  #   needs: [macos, windows, linux, linux-armv6]
   #   name: deploy wheels to pypi
   #   runs-on: ubuntu-18.04
 
